--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>1er archivo GIT</title>
 </head>
+
 <body>
     <h1>Titulo Nuevo</h1>
+    <p>Lorem ipsum dolor sit amet, magna adipiscing elit. Quisque at
+        cursus est. Phasellus id ligula massa. Quisque id lacus mauris.
+        Suspendisse vehicula tortor eu magna.</p>
 </body>
+
 </html>
