añadimos footer y 2 capas

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         cursus est. Phasellus id ligula massa. Quisque id lacus mauris.
         Suspendisse vehicula tortor eu magna.</p>
 </body>
-
+<footer>
+    <div class="col-xs-6">
+    </div>
+    <div class="col-xs-6">
+    </div>
+</footer>
 </html>
