agregamos párrafo a los bloques del footer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </body>
 <footer>
     <div class="col-xs-6">
+        <p>1er bloque</p>
     </div>
     <div class="col-xs-6">
+        <p>2o bloque</p>
     </div>
 </footer>
 </html>
