añadimos estilos al footer y más

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>1er archivo GIT</title>
+    <title>1er archivo GIT, modificado con un footer</title>
+
+<style>
+.pepe{
+    width: 50%;
+    float: left;
+}
+</style>
 </head>
 
 <body>
@@ -13,12 +20,13 @@
     <p>Lorem ipsum dolor sit amet, magna adipiscing elit. Quisque at
         cursus est. Phasellus id ligula massa. Quisque id lacus mauris.
         Suspendisse vehicula tortor eu magna.</p>
+    
 </body>
 <footer>
-    <div class="col-xs-6">
+    <div class="pepe pepe1">
         <p>1er bloque</p>
     </div>
-    <div class="col-xs-6">
+    <div class="pepe pepe2">
         <p>2o bloque</p>
     </div>
 </footer>
