--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>1er archivo GIT, modificado con un footer</title>
 
-<style>
-.pepe{
-    width: 50%;
-    float: left;
-}
-</style>
+    <style>
+        .pepe {
+            width: 50%;
+            float: left;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Titulo Nuevo</h1>
-    <p>Lorem ipsum dolor sit amet, magna adipiscing elit. Quisque at
-        cursus est. Phasellus id ligula massa. Quisque id lacus mauris.
-        Suspendisse vehicula tortor eu magna.</p>
-    
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, impedit sed quia maiores totam, sint debitis
+        ab eum voluptatum, numquam deserunt harum inventore? Totam molestias fuga a corporis nemo pariatur inventore!
+        Obcaecati sunt fugiat nam libero vitae quas? Magni, commodi assumenda beatae vel voluptate voluptatibus.
+        Voluptatibus tempore unde eos delectus.
+    </p>
+
 </body>
 <footer>
     <div class="pepe pepe1">
@@ -30,4 +33,5 @@
         <p>2o bloque</p>
     </div>
 </footer>
+
 </html>
