imagen, estilos y más cambios

--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>1er archivo GIT, modificado con un footer</title>
-
-    <style>
-        .pepe {
-            width: 50%;
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Titulo Nuevo</h1>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, impedit sed quia maiores totam, sint debitis
-        ab eum voluptatum, numquam deserunt harum inventore? Totam molestias fuga a corporis nemo pariatur inventore!
-        Obcaecati sunt fugiat nam libero vitae quas? Magni, commodi assumenda beatae vel voluptate voluptatibus.
-        Voluptatibus tempore unde eos delectus.
-    </p>
+    <div id="bloque1">
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, impedit sed quia maiores totam, sint
+            debitis
+            ab eum voluptatum, numquam deserunt harum inventore? Totam molestias fuga a corporis nemo pariatur
+            inventore!
+            Obcaecati sunt fugiat nam libero vitae quas? Magni, commodi assumenda beatae vel voluptate voluptatibus.
+            Voluptatibus tempore unde eos delectus.
+        </p>
+    </div>
+    <div id="posicionamiento">
+        <h2>Navis</h2>
+        <h3>Code</h3>
+    </div>
+    <div id="posicionamiento2">
+        <h2>Toni</h2>
+        <h3>Manel</h3>
+    </div>
+
 </body>
 <footer>
     <div class="pepe pepe1">
